# coins

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
crates/api/: Cargo.toml
crates/api/src/: error.rs  extractor.rs  main.rs  openapi.rs  state.rs
crates/api/src/routes/: health.rs  mod.rs  risk.rs  safety.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  risk.rs  safety.rs  state.rs
crates/app/src/dto/: cex.rs  common.rs  distilled.rs  mod.rs  research.rs  safety.rs  settings.rs  telegram.rs  token.rs  trade.rs
crates/app/tests/: risk.rs  settings.rs
crates/app/tests/util/: mod.rs
crates/core/config/: Cargo.toml
crates/core/config/src/: lib.rs
crates/core/database/: Cargo.toml
crates/core/database/migrations/: 20260713000001_initial.up.sql
crates/core/database/src/: lib.rs
crates/core/database/src/models/: cex_listing.rs  cluster_count.rs  distilled_token.rs  known_pool.rs  mod.rs  poll_timestamp.rs  pump_bonding_curve.rs  research_entry.rs  risk_settings.rs  sse_event.rs  telegram.rs  token.rs  trade.rs
crates/core/database/src/queries/: cex_listing.rs  cluster_count.rs  distilled_token.rs  known_pool.rs  mod.rs  poll_timestamp.rs  pump_bonding_curve.rs  research_entry.rs  risk_settings.rs  sse_event.rs  telegram.rs  token.rs  trade.rs
crates/core/database/tests/: cex_listing.rs  cluster_count.rs  distilled_token.rs  known_pool.rs  poll_timestamp.rs  pump_bonding_curve.rs  research_entry.rs  risk_settings.rs  sse_event.rs  telegram.rs  token.rs  trade.rs
crates/core/database/tests/util/: mod.rs
crates/core/executor/: Cargo.toml
crates/core/trading/: Cargo.toml
crates/core/trading/src/: lib.rs  real_trade.rs  safety.rs  virtual_trade.rs
crates/core/trading/tests/: safety.rs  virtual_trade.rs
crates/core/trading/tests/util/: mod.rs
crates/jobs/cex/: Cargo.toml
crates/jobs/cex/src/: client.rs  lib.rs
crates/jobs/cex/tests/: cex.rs
crates/jobs/cex/tests/util/: mod.rs
crates/jobs/distiller/: Cargo.toml
crates/jobs/distiller/src/: client.rs  lib.rs
crates/jobs/portfolio/: Cargo.toml
crates/jobs/portfolio/src/: client.rs  lib.rs
crates/jobs/scanner/: Cargo.toml
crates/jobs/scanner/src/: client.rs  cluster.rs  lib.rs  main.rs
crates/jobs/scanner/tests/: extract_tokens.rs  scanner.rs
crates/jobs/scanner/tests/util/: mod.rs
crates/jobs/telegram/: Cargo.toml
crates/jobs/telegram/src/: client.rs  extract.rs  lib.rs
crates/jobs/telegram/tests/: telegram.rs
crates/jobs/telegram/tests/util/: mod.rs
scripts/: gen-certs.sh
