[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/core/config",
    "crates/core/database", "crates/core/executor",
    "crates/jobs/scanner",
]

[workspace.dependencies]
# web
axum = "0.8"

# async
tokio = { version = "1", features = ["full"] }

# middleware
tower-http = { version = "0.7", features = ["cors"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# logging, file and otel outputs
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry-otlp = "0.32"
tracing-opentelemetry = "0.33"

# error typing
anyhow = "1"
thiserror = "2"

# sqlite
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }

# background jobs
dotenvy = "0.15.7"
envy = "0.4.2"
apalis = "1.0.0-rc.9"
apalis-sqlite = "1.0.0-rc.8"
