[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/core/config",
    "crates/core/database", "crates/core/trading",
    "crates/app",
    "crates/jobs/scanner",
    "crates/jobs/cex",
    "crates/jobs/telegram",
    "crates/jobs/distiller",
]

[workspace.dependencies]
# web
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring"] }

# async
tokio = { version = "1.53.0", features = ["full"] }

# middleware
tower-http = { version = "0.7.0", features = ["cors"] }

# serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# logging, file and otel outputs
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = "0.32.0"
tracing-opentelemetry = "0.33.0"

# error typing
anyhow = "1.0.103"
thiserror = "2.0.18"

# sqlite
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "chrono"] }

# validation
validator = { version = "0.19", features = ["derive"] }

# http client
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls"] }

# solana sdk
pumpfun = "4.6.0"
jup-ag-sdk = "1.0.6"

# encoding
base64 = "0.22.1"
bs58 = "0.5.1"

# text
regex = "1.13.1"

# background jobs
dotenvy = "0.15.7"
envy = "0.4.2"
chrono = "0.4.45"
apalis = "1.0.0-rc.9"
apalis-sqlite = "1.0.0-rc.8"

# dev
serial_test = "3.5.0"
wiremock = "0.6.5"
