[package]
name = "coins-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sqlx.workspace = true
validator.workspace = true
coins-config = { path = "../core/config" }
coins-app = { path = "../app" }
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
