[package]
name = "coins-trading"
version = "0.1.0"
edition = "2024"

[dependencies]
pumpfun.workspace = true
jup-ag-sdk.workspace = true
anyhow.workspace = true
chrono.workspace = true
sqlx.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
base64.workspace = true
serde-wincode.workspace = true
serde_json.workspace = true
coins-config = { path = "../config" }
coins-database = { path = "../database" }

[dev-dependencies]
coins-database = { path = "../database" }
tokio.workspace = true
serial_test.workspace = true
