[package]
name = "coins-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
apalis.workspace = true
apalis-sqlite.workspace = true
base64 = "0.22"
bs58 = "0.5"
chrono.workspace = true
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
coins-config = { path = "../../core/config" }
coins-database = { path = "../../core/database" }

[dev-dependencies]
serial_test = "3"
tokio.workspace = true
wiremock = "0.6"
