[package]
name = "coins-telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
coins-config = { path = "../../core/config" }
coins-database = { path = "../../core/database" }
scraper = "0.22.0"

[dev-dependencies]
serial_test.workspace = true
wiremock.workspace = true
